--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
+    "js-cookie": "3.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "js-cookie": "3.0.0",
     "react-icons": "4.3.1",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
